--- a/public/images.html
+++ b/public/images.html
@@ -26,7 +26,8 @@
     -->
     <title>Images Collection</title>
     <link rel="stylesheet" type = "text/css" href="style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  	<script src="../src/gallery.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
