--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <title>Hello World</title>
 	<link rel="stylesheet" type ="text/css" 
 	href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+  <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
